--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "ionicons": "^8.0.13",
     "lenis": "^1.3.14",
     "lucide-react": "^0.552.0",
-    "next": "^16.0.1",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
     "resend": "^6.4.1",
